@@ -1,2 +1,2 @@
 pypkglibdir = @pythondir@/PyGC/IO
-pypkglib_PYTHON = __init__.py GC_proj.py GC_netcdf.py GC_file.py GC_createfile.py GC_loadfile.py GC_readlines.py GC_profile.py GC_epoch.py
+pypkglib_PYTHON = __init__.py GC_proj.py GC_netcdf.py GC_file.py GC_createfile.py GC_loadfile.py GC_readlines.py GC_profile.py GC_epoch.py netcdf.py
